Fix the z-index so the menu is displayed on top of the progress bar

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -895,7 +895,7 @@ gn-indexing-task-status {
   margin-top: -18px;
   .progress-bar-container-fixed {
     position: fixed;
-    z-index: 100;
+    z-index: 2;
     padding-top: 15px;
     background: #fff;
     // width for different screensizes
